# SmartControlKit

./: .gitignore  CMakeLists.txt  README.md  prj.conf
boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
include/: button_input.h  led_control.h  motor_driver.h
src/: button_input.c  led_control.c  main.c  motor_driver.c
test/: mpu6050.c
